@@ -8,6 +8,7 @@ trunk
 * added mxCI() function to calculate likelihood-based confidence intervals
 * mxCompare() shows model information for base models
 * added flag all=[TRUE|FALSE] to mxCompare() function
+* 'SaturatedLikelihood' argument to summary() function will accept MxModel object
 
 Release 0.3.0-1217 (Apr 20, 2010)
 =================================
